--- a/.gitattributes
+++ b/.gitattributes
@@ -1268,9 +1268,76 @@ ideintf/texttools.pas svneol=native#text/pascal
 ideintf/treeviewpropedit.lfm svneol=native#text/plain
 ideintf/treeviewpropedit.lrs svneol=native#text/plain
 ideintf/treeviewpropedit.pas svneol=native#text/plain
+images/22x22/address-book-new.png -text svneol=unset#image/png
+images/22x22/appointment-new.png -text svneol=unset#image/png
+images/22x22/bookmark-new.png -text svneol=unset#image/png
+images/22x22/contact-new.png -text svneol=unset#image/png
+images/22x22/document-new.png -text svneol=unset#image/png
+images/22x22/document-open.png -text svneol=unset#image/png
 images/22x22/document-open.xpm svneol=native#text/plain
+images/22x22/document-print-preview.png -text svneol=unset#image/png
+images/22x22/document-print.png -text svneol=unset#image/png
+images/22x22/document-properties.png -text svneol=unset#image/png
+images/22x22/document-save-as.png -text svneol=unset#image/png
+images/22x22/document-save.png -text svneol=unset#image/png
+images/22x22/edit-clear.png -text svneol=unset#image/png
+images/22x22/edit-copy.png -text svneol=unset#image/png
+images/22x22/edit-cut.png -text svneol=unset#image/png
+images/22x22/edit-delete.png -text svneol=unset#image/png
+images/22x22/edit-find-replace.png -text svneol=unset#image/png
+images/22x22/edit-find.png -text svneol=unset#image/png
+images/22x22/edit-paste.png -text svneol=unset#image/png
+images/22x22/edit-redo.png -text svneol=unset#image/png
+images/22x22/edit-select-all.png -text svneol=unset#image/png
+images/22x22/edit-undo.png -text svneol=unset#image/png
+images/22x22/folder-new.png -text svneol=unset#image/png
+images/22x22/format-indent-less.png -text svneol=unset#image/png
+images/22x22/format-indent-more.png -text svneol=unset#image/png
+images/22x22/format-justify-center.png -text svneol=unset#image/png
+images/22x22/format-justify-fill.png -text svneol=unset#image/png
+images/22x22/format-justify-left.png -text svneol=unset#image/png
+images/22x22/format-justify-right.png -text svneol=unset#image/png
+images/22x22/format-text-bold.png -text svneol=unset#image/png
+images/22x22/format-text-italic.png -text svneol=unset#image/png
+images/22x22/format-text-strikethrough.png -text svneol=unset#image/png
+images/22x22/format-text-underline.png -text svneol=unset#image/png
+images/22x22/go-bottom.png -text svneol=unset#image/png
+images/22x22/go-down.png -text svneol=unset#image/png
+images/22x22/go-first.png -text svneol=unset#image/png
+images/22x22/go-home.png -text svneol=unset#image/png
 images/22x22/go-home.xpm svneol=native#text/plain
+images/22x22/go-jump.png -text svneol=unset#image/png
+images/22x22/go-last.png -text svneol=unset#image/png
+images/22x22/go-next.png -text svneol=unset#image/png
+images/22x22/go-previous.png -text svneol=unset#image/png
+images/22x22/go-top.png -text svneol=unset#image/png
+images/22x22/go-up.png -text svneol=unset#image/png
+images/22x22/list-add.png -text svneol=unset#image/png
+images/22x22/list-remove.png -text svneol=unset#image/png
+images/22x22/mail-forward.png -text svneol=unset#image/png
+images/22x22/mail-mark-junk.png -text svneol=unset#image/png
+images/22x22/mail-message-new.png -text svneol=unset#image/png
+images/22x22/mail-reply-all.png -text svneol=unset#image/png
+images/22x22/mail-reply-sender.png -text svneol=unset#image/png
+images/22x22/mail-send-receive.png -text svneol=unset#image/png
+images/22x22/media-eject.png -text svneol=unset#image/png
+images/22x22/media-playback-pause.png -text svneol=unset#image/png
+images/22x22/media-playback-start.png -text svneol=unset#image/png
+images/22x22/media-playback-stop.png -text svneol=unset#image/png
+images/22x22/media-record.png -text svneol=unset#image/png
+images/22x22/media-seek-backward.png -text svneol=unset#image/png
+images/22x22/media-seek-forward.png -text svneol=unset#image/png
+images/22x22/media-skip-backward.png -text svneol=unset#image/png
+images/22x22/media-skip-forward.png -text svneol=unset#image/png
+images/22x22/process-stop.png -text svneol=unset#image/png
+images/22x22/system-lock-screen.png -text svneol=unset#image/png
+images/22x22/system-log-out.png -text svneol=unset#image/png
+images/22x22/system-search.png -text svneol=unset#image/png
+images/22x22/system-shutdown.png -text svneol=unset#image/png
+images/22x22/tab-new.png -text svneol=unset#image/png
+images/22x22/view-refresh.png -text svneol=unset#image/png
 images/22x22/view-refresh.xpm svneol=native#text/plain
+images/22x22/window-new.png -text svneol=unset#image/png
 images/LazarusForm.bmp -text svneol=unset#image/bmp
 images/LazarusForm.ico -text svneol=unset#image/x-icon
 images/LazarusProject.ico -text svneol=unset#image/x-icon
@@ -1501,6 +1568,7 @@ images/fonts.xpm -text svneol=native#image/x-xpixmap
 images/formatbold.bmp -text
 images/formatitalic.bmp -text
 images/formatunderline.bmp -text
+images/icon-naming-spec.xml svneol=native#text/plain
 images/ide_icon48x48.png -text svneol=unset#image/png
 images/insertcodetag.xpm svneol=native#text/plain
 images/insertremark.xpm svneol=native#text/plain
