--- a/.gitattributes
+++ b/.gitattributes
@@ -2200,6 +2200,7 @@ lcl/languages/lcl.fi.po svneol=native#text/plain
 lcl/languages/lcl.fr.po svneol=native#text/plain
 lcl/languages/lcl.it.po svneol=native#text/plain
 lcl/languages/lcl.nl.po svneol=native#text/plain
+lcl/languages/lcl.pb.po svneol=native#text/plain
 lcl/languages/lcl.pl.po svneol=native#text/plain
 lcl/languages/lcl.pliso.po svneol=native#text/plain
 lcl/languages/lcl.plwin.po svneol=native#text/plain
