added dynamicarray documentation   from Marton Papp
 SVN 8940@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -745,6 +745,7 @@ docs/xml/lcl/spin.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/stdactns.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/stdctrls.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/stringhashlist.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/tarrayexample.pas svneol=native#text/plain
 docs/xml/lcl/textstrings.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/toolwin.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/translations.xml svneol=LF#text/xml eol=lf
