added support for compiling for Solaris from Peter Vreman
 SVN 8966@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1094,6 +1094,7 @@ ide/include/freebsd/lazconf.inc svneol=native#text/pascal
 ide/include/ide.inc svneol=native#text/pascal
 ide/include/linux/lazconf.inc svneol=native#text/pascal
 ide/include/netbsd/lazconf.inc svneol=native#text/pascal
+ide/include/solaris/lazconf.inc svneol=native#text/plain
 ide/include/unix/lazbaseconf.inc svneol=native#text/pascal
 ide/include/win32/lazconf.inc svneol=native#text/pascal
 ide/initialsetupdlgs.pas svneol=native#text/pascal
