* adds some documentation to the TCustomCheckbox control. * added an example file for TCustomCheckbox * Improves the formatting of the tarrayexample.pas file * adds some documentation to the TWinControl patch by Graeme
 SVN 8984@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -745,6 +745,7 @@ docs/xml/lcl/propertystorage.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/spin.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/stdactns.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/stdctrls.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/stdctrls/tcustomcheckbox_allowgrayed.pas svneol=native#text/plain
 docs/xml/lcl/stringhashlist.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/textstrings.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/toolwin.xml svneol=LF#text/xml eol=lf
