--- a/.gitattributes
+++ b/.gitattributes
@@ -369,6 +369,7 @@ components/sqlite/sqlitelaz.pas svneol=native#text/plain
 components/sqlite/tsqlite3dataset.xpm svneol=native#text/plain
 components/sqlite/tsqlitedataset.xpm -text svneol=native#image/x-xpixmap
 components/synedit/allsyneditunits.pp svneol=native#text/pascal
+components/synedit/design/tsynanysyn.xpm svneol=native#text/plain
 components/synedit/design/tsynautocomplete.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsyncppsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsyncsssyn.xpm -text svneol=native#image/x-xpixmap
@@ -427,6 +428,7 @@ components/synedit/syneditstrconst.pp svneol=native#text/pascal
 components/synedit/synedittextbuffer.pp svneol=native#text/pascal
 components/synedit/synedittypes.pp svneol=native#text/pascal
 components/synedit/synexporthtml.pas svneol=native#text/pascal
+components/synedit/synhighlighterany.pas svneol=native#text/plain
 components/synedit/synhighlightercpp.pp svneol=native#text/pascal
 components/synedit/synhighlightercss.pas svneol=native#text/pascal
 components/synedit/synhighlighterhashentries.pas svneol=native#text/pascal
