anchordocking: implemented saving layout
 SVN 9000@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -990,6 +990,8 @@ ide/bigidemake.cfg svneol=native#text/plain
 ide/buildfiledlg.lfm svneol=native#text/plain
 ide/buildfiledlg.lrs svneol=native#text/pascal
 ide/buildfiledlg.pas svneol=native#text/pascal
+ide/buildlazdialog.lfm svneol=native#text/plain
+ide/buildlazdialog.lrs svneol=native#text/plain
 ide/buildlazdialog.pas svneol=native#text/pascal
 ide/charactermapdlg.lfm svneol=native#text/plain
 ide/charactermapdlg.lrs svneol=native#text/pascal
