--- a/debian/rules
+++ b/debian/rules
@@ -37,7 +37,7 @@ clean:
 	rm -f build-stamp configure-stamp
 
 	# Add here commands to clean up after the build process.
-	-$(MAKE) clean
+	-$(MAKE) distclean
 
 	dh_clean 
 
@@ -50,18 +50,19 @@ install: build
 	# Add here commands to install the package into debian/lazarus.
 	
 	# copy lazarus to /usr/share
+	install -d $(LAZDEBDIR)/usr/share/lazarus
 	install -d $(LAZDEBDIR)/usr/lib/lazarus
 	install -d $(LAZDEBDIR)/usr/bin
 	
-	-cp -R $(CURDIR)/* $(LAZDEBDIR)/usr/lib/lazarus/
-	-rm -rf $(LAZDEBDIR)/usr/lib/lazarus/debian/
+	sh $(CURDIR)/debian/move-usr-lib.sh $(LAZDEBDIR)
 	
 	# copy icons and menu entries for the GNOME menu
 	install -d $(LAZDEBDIR)/usr/share/pixmaps
 	install -d $(LAZDEBDIR)/usr/share/gnome/apps/Development
 	install -d $(LAZDEBDIR)/usr/bin
 	
-	install -m 644 $(CURDIR)/images/ide_icon48x48.png $(LAZDEBDIR)/usr/share/pixmaps/lazarus.png
+	convert $(CURDIR)/images/ide_icon48x48.png $(LAZDEBDIR)/usr/share/pixmaps/lazarus.xpm
+	chmod 644 $(LAZDEBDIR)/usr/share/pixmaps/lazarus.xpm
 	install -m 644 $(CURDIR)/install/gnome.ide.desktop $(LAZDEBDIR)/usr/share/gnome/apps/Development/lazarus.desktop
 	
 # Build architecture-independent files here.
