use startlazarus to start lazarus from Joost
 SVN 9041@trunk

--- a/install/gnome.ide.desktop
+++ b/install/gnome.ide.desktop
@@ -29,7 +29,7 @@ Name[tr]=Lazarus
 Name[uk]=Lazarus
 Name[zh_CN]=Lazarus
 Comment=Lazarus IDE
-Exec=lazarus %f
+Exec=startlazarus %f
 Terminal=0
 Type=Application
 Icon=lazarus.png
