renamed gnome.ide.desktop to lazarus.desktop
 SVN 9045@trunk

--- a/debian/rules
+++ b/debian/rules
@@ -63,7 +63,7 @@ install: build
 	
 	convert -geometry 32x32 $(CURDIR)/images/ide_icon48x48.png $(LAZDEBDIR)/usr/share/pixmaps/lazarus.xpm
 	chmod 644 $(LAZDEBDIR)/usr/share/pixmaps/lazarus.xpm
-	install -m 644 $(CURDIR)/install/gnome.ide.desktop $(LAZDEBDIR)/usr/share/gnome/apps/Development/lazarus.desktop
+	install -m 644 $(CURDIR)/install/lazarus.desktop $(LAZDEBDIR)/usr/share/gnome/apps/Development/lazarus.desktop
 	
 # Build architecture-independent files here.
 binary-indep: build install
