--- a/.gitattributes
+++ b/.gitattributes
@@ -690,6 +690,7 @@ docs/xml/lcl/clistbox.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/colorbox.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/comctrls.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/comctrls/ttoolbutton.pas svneol=native#text/plain
+docs/xml/lcl/comctrls/ttreenode_data.pas svneol=native#text/plain
 docs/xml/lcl/commctrl.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/controls.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/customtimer.xml svneol=LF#text/xml eol=lf
@@ -1008,6 +1009,11 @@ examples/turbopower_ipro/mainunit.pas svneol=native#text/pascal
 examples/turbopower_ipro/simplepage2.html svneol=native#text/html
 examples/turbopower_ipro/tpiproexample.lpi svneol=native#text/plain
 examples/turbopower_ipro/tpiproexample.lpr svneol=native#text/pascal
+examples/xmlstreaming/mainunit.lfm svneol=native#text/plain
+examples/xmlstreaming/mainunit.lrs svneol=native#text/plain
+examples/xmlstreaming/mainunit.pas svneol=native#text/plain
+examples/xmlstreaming/streamasxmldemo.lpi svneol=native#text/plain
+examples/xmlstreaming/streamasxmldemo.lpr svneol=native#text/plain
 ide/Makefile svneol=native#text/plain
 ide/Makefile.fpc svneol=native#text/plain
 ide/aboutfrm.lfm svneol=native#text/plain
