renamed msgintf.pas to idemsgintf.pas
 SVN 9082@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1277,6 +1277,7 @@ ideintf/helpfpdoc.pas svneol=native#text/pascal
 ideintf/helphtml.pas svneol=native#text/pascal
 ideintf/helpintf.pas svneol=native#text/pascal
 ideintf/idecommands.pas svneol=native#text/pascal
+ideintf/idemsgintf.pas svneol=native#text/plain
 ideintf/idewindowintf.pas svneol=native#text/plain
 ideintf/imagelisteditor.lfm svneol=native#text/plain
 ideintf/imagelisteditor.lrs svneol=native#text/plain
@@ -1290,7 +1291,6 @@ ideintf/maskpropedit.lfm svneol=native#text/plain
 ideintf/maskpropedit.lrs svneol=native#text/plain
 ideintf/maskpropedit.pas svneol=native#text/plain
 ideintf/menuintf.pas svneol=native#text/plain
-ideintf/msgintf.pas svneol=native#text/plain
 ideintf/newfield.lfm svneol=native#text/plain
 ideintf/newfield.lrs svneol=native#text/pascal
 ideintf/newfield.pas svneol=native#text/pascal
