added scripts for making macosx snapshots
 SVN 9087@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2409,6 +2409,9 @@ tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
 tools/install/macosx/fpcsrc-release.packproj.template svneol=native#text/plain
 tools/install/macosx/fpcsrc.packproj.template svneol=native#text/plain
 tools/install/macosx/lazarus.packproj.template svneol=native#text/plain
+tools/install/macosx/makefpcsnapshot.sh svneol=native#text/plain
+tools/install/macosx/makefpcsrcsnapshot.sh svneol=native#text/plain
+tools/install/macosx/makelazsnapshot.sh svneol=native#text/plain
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
 tools/install/rpm/create_nonroot_rpmmacros.sh svneol=native#text/plain
 tools/install/rpm/fpc.spec.template svneol=native#text/plain
