improved getting selection from xterm and kde apps
 SVN 9129@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2108,6 +2108,13 @@ lcl/interfaces/gtk/gtkwsspin.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkwsstdctrls.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkwstoolwin.pp svneol=native#text/pascal
 lcl/interfaces/gtk/interfaces.pp svneol=native#text/pascal
+lcl/interfaces/gtk/tests/gtkclipboard.lpi svneol=native#text/plain
+lcl/interfaces/gtk/tests/gtkclipboard.lpr svneol=native#text/plain
+lcl/interfaces/gtk/tests/lclclipboardtest.lpi svneol=native#text/plain
+lcl/interfaces/gtk/tests/lclclipboardtest.lpr svneol=native#text/plain
+lcl/interfaces/gtk/tests/lclclipboardunit.lfm svneol=native#text/plain
+lcl/interfaces/gtk/tests/lclclipboardunit.lrs svneol=native#text/plain
+lcl/interfaces/gtk/tests/lclclipboardunit.pas svneol=native#text/plain
 lcl/interfaces/gtk/tnotebook_close_tab.xpm -text svneol=native#image/x-xpixmap
 lcl/interfaces/gtk2/gtk2int.pas svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2interface.lpk svneol=native#text/pascal
