--- a/.gitattributes
+++ b/.gitattributes
@@ -565,6 +565,16 @@ debugger/watchesdlg.pp svneol=native#text/pascal
 debugger/watchpropertydlg.lfm svneol=native#text/plain
 debugger/watchpropertydlg.lrs svneol=native#text/pascal
 debugger/watchpropertydlg.pp svneol=native#text/pascal
+debugger/windebug/fpwd/README svneol=native#text/plain
+debugger/windebug/fpwd/fpwd.lpi svneol=native#text/plain
+debugger/windebug/fpwd/fpwd.lpr svneol=native#text/pascal
+debugger/windebug/fpwd/fpwdcommand.pas svneol=native#text/pascal
+debugger/windebug/fpwd/fpwdglobal.pas svneol=native#text/pascal
+debugger/windebug/fpwd/fpwdloop.pas svneol=native#text/pascal
+debugger/windebug/fpwd/fpwdpeimage.pas svneol=native#text/pascal
+debugger/windebug/fpwd/fpwdtype.pas svneol=native#text/pascal
+debugger/windebug/windebugger.pp svneol=native#text/pascal
+debugger/windebug/windextra.pp svneol=native#text/pascal
 designer/abstractcompiler.pp svneol=native#text/pascal
 designer/abstracteditor.pp svneol=native#text/pascal
 designer/abstractfilesystem.pp svneol=native#text/pascal
