--- a/.gitattributes
+++ b/.gitattributes
@@ -2248,10 +2248,12 @@ lcl/interfaces/wince/winceint.pp svneol=native#text/plain
 lcl/interfaces/wince/wincelclintf.inc svneol=native#text/plain
 lcl/interfaces/wince/wincelclintfh.inc svneol=native#text/plain
 lcl/interfaces/wince/winceobject.inc svneol=native#text/plain
+lcl/interfaces/wince/winceproc.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewinapi.inc svneol=native#text/plain
 lcl/interfaces/wince/wincewinapih.inc svneol=native#text/plain
 lcl/interfaces/wince/wincewsbuttons.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewscontrols.pp svneol=native#text/plain
+lcl/interfaces/wince/wincewsextctrls.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsforms.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsstdctrls.pp svneol=native#text/plain
 lcl/intfgraphics.pas svneol=native#text/pascal
