added CalendarPopup for DateEdit
 SVN 9149@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1825,6 +1825,9 @@ lcl/extgraphics.pas svneol=native#text/pascal
 lcl/filectrl.pp svneol=native#text/pascal
 lcl/fileutil.pas svneol=native#text/pascal
 lcl/forms.pp svneol=native#text/pascal
+lcl/forms/calendarpopup.lfm svneol=native#text/plain
+lcl/forms/calendarpopup.lrs svneol=native#text/plain
+lcl/forms/calendarpopup.pas svneol=native#text/plain
 lcl/fpcadds.pas svneol=native#text/pascal
 lcl/graphics.pp svneol=native#text/pascal
 lcl/graphmath.pp svneol=native#text/pascal
